changed thursday schedule

--- a/src/pages/2025/attend/resources.mdx
+++ b/src/pages/2025/attend/resources.mdx
@@ -13,11 +13,11 @@ import Image from "next/image";
 
 </div>
 
-We have a wealth of general information on our conference Notion page. Topics include Building a Travel Request Proposal, Conference Attire, and more. Please scroll down for information specific to this year's conference.
+We are currently updating our conference resources for 2025. Please check back soon for updated information including Building a Travel Request Proposal, Conference Attire, and more. Please scroll down for information specific to this year's conference.
 
 <br/>
 <div className="text-l flex justify-center p-2">
-    <CTAButton onClick="https://ostem.notion.site/Conference-Attendee-Resources-2024-76ea110de8a447278d856623c7e8a7ce" backgroundColor="bright-peach">
+    <CTAButton onClick="/2025/attend/resources-construction" backgroundColor="bright-peach">
       Conference Attendee Resources
     </CTAButton>
 </div>
