--- a/src/pages/2025/attend/schedule.mdx
+++ b/src/pages/2025/attend/schedule.mdx
@@ -34,18 +34,15 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 <div className="text-teal-700 dark:text-teal-300">
 
 ### Thursday - October - 16
-
 </div>
 
 - **8:00 AM - 6:00PM:** Registration Desk / Help Desk 
 - **9:00 AM - 12:00 PM:** Pre-Conference Programs
 - **11:30 AM - 1:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> OAC Meeting
 - **1:00 PM - 1:40 PM:** New to the Conference Session
-- **2:00 PM - 5:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
 - **2:00 PM - 5:00 PM:** Specialty Workshop Blocks
-- **5:00 PM - 7:00 PM:** Dinner Break
-   - Attendees are free to explore local dining options during this time.
-- **7:00 PM - 8:00 PM:** Membership Mixers
+- **2:00 PM - 5:00 PM:** Specialty Workshop Blocks
+- **5:00 PM - 7:00 PM:** Membership Mixers
 
 <div className="text-nav-blue">
 
