Update RFP, exhibitors

--- a/src/pages/2025/partner/exhibitors-and-sponsors.mdx
+++ b/src/pages/2025/partner/exhibitors-and-sponsors.mdx
@@ -45,7 +45,7 @@ import Image from "next/future/image";
 
 </div>
 
-We invite you to join us in Portland, Oregon. As a partner you will be a critical
+We invite you to join us in Baltimore, MD. As a partner you will be a critical
 member of our community.
 
 <div className="flex flex-col items-center text-xl my-4">
@@ -78,41 +78,6 @@ sponsorship@ostem.org.
 
 ---
 
-### <div>oSTEM Partner Standards</div>
-
-<div>
-  Minimum requirement to be a sponsor or exhibitor at the Annual 
-Conference:
-
-<div className="my-4">
-
-- Publicly available nondiscrimination policy including sexual orientation and
-  gender identity and expression.
-- Has hosted at least 1 LGBTQ+ focused competency training including pronoun
-  usage for recruiters within the last 3 years.
-
-</div>
-
-**WHY?**
-
-We want our members to feel confident that they’re engaging with prospective
-employers who are committed to LGBTQ-inclusive policies and practices.
-
-**Don’t feel discouraged if you haven’t met these requirements. oSTEM can help
-you get there!**
-
-oSTEM hosted trainings are available for OAC members free of charge and
-available to non-OAC members at a charge. Please give at least 3-week notice for
-scheduling.
-
-Contact sponsorship@ostem.org to learn more.
-
-<br />
-
-</div>
-
----
-
 ### <div>Partner Awards</div>
 
 <div className="mt-2">
@@ -136,15 +101,15 @@ These prestigious awards are an opportunity to celebrate the achievements,
 leadership, and dedication of LGBTQ+ individuals and allies who have made a
 significant impact in our fields. We encourage you to nominate deserving
 individuals or projects that embody the spirit of inclusivity, innovation, and
-progress. **Please note that 2025 awards are not open yet.**
+progress. 
 
 <div className="mt-2 mb-8 pt-2 text-center">
   <CTAButton
-    onClick="/2024/awards#sponsor-awards"
+    onClick="/2025/awards#sponsor-awards"
     backgroundColor="rasp"
     target="_self"
   >
-    View 2024 Awards
+    View 2025 Awards
   </CTAButton>
 </div>
 
