--- a/src/pages/2025/present/request-for-programs.mdx
+++ b/src/pages/2025/present/request-for-programs.mdx
@@ -19,20 +19,15 @@ import { Tab } from '@headlessui/react';
 
 </div>
 
-oSTEM is now accepting program proposals for the 15th Annual oSTEM Conference.
+Program proposal submissions for the 15th Annual oSTEM Conference are closed.
 
 Successful programs will align with oSTEM’s mission and core values: *integrity, intentionality, respect, passion, and grit*. 
 
 - **Wednesday, March 5th**: Request for Programming Released
-- **🚨NEW DATE - Sunday, June 22nd**: Deadline for Submissions
+- **Sunday, June 22nd**: Deadline for Submissions
 - **TBA**: RFP Decision Notifications
 
 <br/>
-<div className="text-l flex justify-center p-2">
-    <CTAButton onClick="https://form.jotform.com/250156105369151" backgroundColor="bright-peach">
-      Submit your RFP Here!
-    </CTAButton>
-</div>
 
 
 <div className="text-nav-blue font-bold">
