--- a/src/pages/2025/present/request-for-panelists.mdx
+++ b/src/pages/2025/present/request-for-panelists.mdx
@@ -158,7 +158,7 @@ We're looking for panelists who can share their unique perspectives and experien
 
 </div>
 
-- Complimentary conference registration for selected panelists
+- 50% conference registration discount for selected panelists
 - Add "Conference Panelist" to your resume or CV
 - Share your expertise and experiences with the community
 - Network with other LGBTQ+ professionals in STEM
