--- a/src/pages/2025/attend/resources.mdx
+++ b/src/pages/2025/attend/resources.mdx
@@ -22,6 +22,21 @@ We are currently updating our conference resources for 2025. Please check back s
     </CTAButton>
 </div>
 
+<div className="text-nav-green font-bold">
+
+## Collegiate Resources
+
+</div>
+
+Additional resources targeted specifically towards our collegiate attendees can be found below. Get information about collegiate grants and career fair exhibitors there!
+
+<br/>
+<div className="text-l flex justify-center p-2">
+    <CTAButton onClick="/2025/attend/collegiate-resources" backgroundColor="bright-peach">
+      Collegiate Attendee Resources
+    </CTAButton>
+</div>
+
 <br/>
 
 
@@ -97,10 +112,6 @@ Baltimore, MD, 21202</span>
 <br/>(1 block to BCC, 2 blocks to Light Rail)
 <br/>$225 per Night plus taxes and fees</p>
 
-<!-- <span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span>
-<p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
-  Coming Soon!
-</p> -->
 <br/>
 <a href=" https://www.hyatt.com/en-US/group-booking/BWIRB/G-OSTE" rel="noopener noreferrer" target='_blank' 
 class="inline-block mt-4 px-3 py-1.5 bg-red-600 text-white shadow hover:bg-red-700 transition-colors duration-200 dark:bg-red-500 dark:hover:bg-red-600"
@@ -140,7 +151,7 @@ class="inline-block mt-4 px-3 py-1.5 bg-pink-600 text-white shadow hover:bg-pink
 <br/>$229 per Night plus taxes and fees</p>
 
 
-<!-- <span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span> -->
+{/* <span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span> */}
 <br/>
 
 
