--- a/src/pages/2025/attend/schedule.mdx
+++ b/src/pages/2025/attend/schedule.mdx
@@ -37,7 +37,7 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 </div>
 
 - **8:00 AM - 6:00PM:** Registration Desk / Help Desk 
-- **9:00 AM - 12:00 PM:** Pre-Conference Programs
+- **9:00 AM - 12:00 PM:** Gender Affirmation Symposium
 - **11:30 AM - 1:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> OAC Meeting
 - **1:00 PM - 1:40 PM:** New to the Conference Session
 - **2:00 PM - 5:00 PM:** Specialty Workshop Blocks
