Add approved Riot logo

--- a/src/pages/2025/attend/collegiate-resources.mdx
+++ b/src/pages/2025/attend/collegiate-resources.mdx
@@ -5,6 +5,7 @@ import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { BannerMessage } from '@/components/banner/BannerMessage'
 import { faCar, faHotel, faInfo, faPlane, faTrain } from '@fortawesome/free-solid-svg-icons';
 import Image from "next/image";
+import logoRiot from './002_RG_2021_FULL_LOCKUP_RED.png'
 
 <SiteLayout title="Collegiate Resources" accent="nav-green">
 
@@ -24,7 +25,9 @@ The Collegiate Conference Grant is used to help chapters/individuals fund their 
 
 Huge thank you to our sponsors for making this Collegiate Conference Grant possible!
 
-** TODO: Sponsor logos **
+<div class='w-48 pt-4 pb-6'>
+<Image src={logoRiot}></Image>
+</div>
 
 This year, the application is split into individual or chapter applications. Students are encouraged to apply based on the circumstance that best fits their situation.
 
