--- a/src/pages/2025/attend/schedule.mdx
+++ b/src/pages/2025/attend/schedule.mdx
@@ -41,7 +41,6 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 - **11:30 AM - 1:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> OAC Meeting
 - **1:00 PM - 1:40 PM:** New to the Conference Session
 - **2:00 PM - 5:00 PM:** Specialty Workshop Blocks
-- **2:00 PM - 5:00 PM:** Specialty Workshop Blocks
 - **5:00 PM - 6:00 PM:** Membership Mixers
 
 <div className="text-nav-blue">
@@ -57,7 +56,7 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 - **10:00 AM - 6:00 PM:** oSTEM Closet
 - **11:00 AM - 12:00 PM:** Workshop Block 2
 - **12:00 PM - 3:00 PM:** Career and Graduate School Expo
-- **3:00 PM - 4:00 PM:** Workshop Block 3
+- **3:00 PM - 4:00 PM:** Workshop Block 3 + Short Research Talks
 - **4:15 PM - 5:00 PM:** Evening Plenary
 - **5:00 PM - 6:30 PM:** Dinner Break
     - Attendees are free to explore local dining options during this time.
@@ -72,7 +71,7 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 
 - **8:00 AM:** Poster Room opens
 - **8:00 AM - 8:00 PM:** Registration Desk / Help Desk 
-- **9:00 AM - 10:00 AM:** Workshop Block 4
+- **9:00 AM - 10:00 AM:** Workshop Block 4 + Short Research Talks
 - **10:00 AM - 1:00 PM:** Career and Graduate School Expo
 - **10:00 AM - 4:00 PM:** oSTEM Closet: Step Out in Style
 - **1:00 PM - 2:00 PM:** Poster Presentation Group 1
