Whova release + wording updates

--- a/src/pages/2025/attend/registration.mdx
+++ b/src/pages/2025/attend/registration.mdx
@@ -154,6 +154,9 @@ No exceptions will be made for online registration after the deadline. There is 
 #### Are registration discounts available?
 Yes, oSTEM members get a discounted rate. Furthermore, the member discount stacks with the early-bird discount allowing you to save more if you purchase your ticket by June 30.
 
+#### Do I have to be of an LGBTQ+ identity to attend the oSTEM conference?
+All are welcome at the oSTEM conference, regardless of any component of personal identity. By registering and attending, you agree to abide by the [oSTEM Conference Code of Conduct](https://ostem.org/page/code-of-conduct).
+
 #### I submitted a RFP. When should I register?
 Attendees with an accepted [Request for Programs (RFP)](/2025/present/request-for-programs) submission will receive a 50% registration discount\* on their conference pass. As such, you should hold off registration until you hear whether your submission was accepted or not.
 
