--- a/src/pages/2025/attend/resources.mdx
+++ b/src/pages/2025/attend/resources.mdx
@@ -13,12 +13,18 @@ import Image from "next/image";
 
 </div>
 
-We are currently updating our conference resources for 2025. Please check back soon for updated information including Building a Travel Request Proposal, Conference Attire, and more. Please scroll down for information specific to this year's conference.
+We are using an online platform called Whova for our conference this year. All conference attendees have access to Whova, both as an app on your phone and as a web app on your laptop. To enter Whova, sign in using the **same** email you used in registration and the oSTEM 2025 event will show up!
+
+Things you can do in Whova include but are not limited to:
+- Viewing the event agenda and planning your personal schedule
+- Accessing documents and slides shared by organizers or speakers
+- Finding others this event and planning or joining them in social activities such as a morning run, coffee hours, or meet-ups with your fellow attendees
+- (Mobile) Receiving updates such as announcements and  last minute session changes from the organizers
 
 <br/>
 <div className="text-l flex justify-center p-2">
-    <CTAButton onClick="/2025/attend/resources-construction" backgroundColor="bright-peach">
-      Conference Attendee Resources
+    <CTAButton onClick="https://whova.com/portal/wEd@0WUr3YKxrkQZXwQ71Y@8-gMN99hZpaMvJetEh-k=" backgroundColor="bright-peach">
+      Open Whova
     </CTAButton>
 </div>
 
