--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -73,11 +73,11 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
       className='rounded-t'
     />
       
-      <h3 className="p-4 pt-3 text-white">Conference for LGBTQ+ People in STEM</h3>
+      <h3 className="p-4 pt-3 text-white">Conference for LGBTQ+ People and Allies in STEM</h3>
         <div className="bg-primary text-left rounded p-4">
         <p>
           The 15th Annual oSTEM Conference will take place in Baltimore, MD
-          with 1,100+ LGBTQ+ students, professionals, and recruiters in STEM fields
+          with 1,100+ LGBTQ+ students, professionals, recruiters, and respective allies in STEM fields
           from across the country and around the globe. This space is designed for
           attendees to share their professional and personal experiences and learn
           from one another in an authentic and vulnerable way. 
