Add Whova information

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -38,9 +38,11 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
   <h3 className="p-4 pt-3 text-white">2025 Conference Key Info</h3>
   <div className="bg-primary text-center rounded">
     <div className='text-left p-4'>
-      <span className="font-bold">Dates:</span> Thursday, October 16th through Saturday, October 18th, 2025
-      <br />
-      <span className="font-bold">Location:</span> Baltimore, Maryland at the Baltimore Convention Center
+    <b>Attendees: </b>Access all conference info through our event platform, <a href='https://whova.com/portal/wEd@0WUr3YKxrkQZXwQ71Y@8-gMN99hZpaMvJetEh-k=' target='_blank' rel='noreferrer'>Whova</a>. More information can be found on our <a href='/2025/attend/resources'>general resources</a> page.
+    <br /><br />
+    <span className="font-bold">Dates:</span> Thursday, October 16th through Saturday, October 18th, 2025
+    <br />
+    <span className="font-bold">Location:</span> Baltimore, Maryland at the Baltimore Convention Center
     <br />
     </div>
     <div className="text-left p-4">
