--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -13,7 +13,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 
 <SiteLayout>
 
-<div className="border-baltimore-blue border-solid text-center">
+<div className="border-albuquerque-brown border-solid text-center">
   <picture>
     <source srcSet="/images/2026/16th_banner_square.png" media='(orientation: portrait)'/>
     <img
@@ -25,7 +25,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 </div>
 
 <div className="grid md:grid-cols-5">
-  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
+  <div className="rounded md:col-span-5 mt-8 border-4 border-albuquerque-brown border-solid bg-albuquerque-brown">
     <h3 className="p-4 pt-3 text-white">2026 Conference Countdown</h3>
     <div className="bg-primary text-center rounded pt-4">
       <p className='text-xl'>We are excited to see you soon in</p>
@@ -34,12 +34,10 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
     </div>
   </div>
 
-  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
+  <div className="rounded md:col-span-5 mt-8 border-4 border-albuquerque-brown border-solid bg-albuquerque-brown">
   <h3 className="p-4 pt-3 text-white">2026 Conference Key Info</h3>
   <div className="bg-primary text-center rounded">
     <div className='text-left p-4'>
-    <b>Attendees: </b>Access all conference info through our event platform, <a href='https://whova.com/portal/wEd@0WUr3YKxrkQZXwQ71Y@8-gMN99hZpaMvJetEh-k=' target='_blank' rel='noreferrer'>Whova</a>. More information can be found on our <a href='/2026/attend/resources'>general resources</a> page.
-    <br /><br />
     <span className="font-bold">Dates:</span> Thursday, October 22th through Saturday, October 24th, 2026
     <br />
     <span className="font-bold">Location:</span> Albuquerque, New Mexico at the Albuquerque Convention Center
@@ -48,24 +46,15 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
     <div className="text-left p-4">
       <h4 className="font-bold text-lg mb-2">🗓️ Key Dates</h4>
       <ul className="space-y-2">
-        <li><span className="font-semibold">RFP Opens:</span> March 1, 2026</li>
-        <li><span className="font-semibold">Registration Opens:</span> May 1, 2026</li>
-        <li><span className="font-semibold">Call for Posters/Talks Opens:</span> May 1, 2026</li>
-        <li><span className="font-bold">Extended! RFP Deadline:</span> June 22, 2026</li>
-        <li><span className="font-semibold">Early Bird Deadline:</span> June 30, 2026</li>
-        <li><span className="font-semibold">Research Talk Deadline:</span> June 30, 2026</li>
-        <li><span className="font-semibold">Accomodations Request Deadline:</span> August 31, 2026</li>
-        <li><span className="font-semibold">Poster Submission Deadline:</span> August 31, 2026</li>
-        <li><span className="font-semibold">Hotel Block Closes:</span> September 23, 2026</li>
-        <li><span className="font-semibold">Registration Closes:</span> September 26, 2026</li>
-        <li><span className="font-semibold">Conference Weekend:</span> October 16–18, 2026</li>
+        <li><span className="font-semibold">Check Back in 2026</span></li>
+        <li><span className="font-semibold">Conference Weekend:</span> October 22–14, 2026</li>
       </ul>
     </div>
   </div>
 </div>
 
 
-  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
+  <div className="rounded md:col-span-5 mt-8 border-4 border-albuquerque-brown border-solid bg-albuquerque-brown">
     <Image
       src="/images/2023/2023_homepage_bannerupdate.png"
       alt=""
