--- a/src/pages/2025/index_archive.mdx
+++ b/src/pages/2025/index_archive.mdx
@@ -13,48 +13,58 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
 
 <SiteLayout>
 
-<div className="border-albuquerque-brown border-solid text-center">
+<div className="border-baltimore-blue border-solid text-center">
   <picture>
-    <source srcSet="/images/2026/16th_banner_square.png" media='(orientation: portrait)'/>
+    <source srcSet="/images/2025/15th_banner_square.png" media='(orientation: portrait)'/>
     <img
-      alt="Banner for the 16th Annual oSTEM Conference, from October 16-18 in Albuquerque, NM."
-      src="/images/2026/16th_annual_banner.png"
+      alt="Banner for the 15th Annual oSTEM Conference, from October 16-18 in Baltimore, MD."
+      src="/images/2025/15th_annual_banner.png"
       className="flex w-200 mx-auto rounded"
     />
   </picture>
 </div>
 
 <div className="grid md:grid-cols-5">
-  <div className="rounded md:col-span-5 mt-8 border-4 border-albuquerque-brown border-solid bg-albuquerque-brown">
-    <h3 className="p-4 pt-3 text-white">2026 Conference Countdown</h3>
+  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
+    <h3 className="p-4 pt-3 text-white">2025 Conference Countdown</h3>
     <div className="bg-primary text-center rounded pt-4">
       <p className='text-xl'>We are excited to see you soon in</p>
-      <p className="pt-0 text-4xl" ><b className={styles.gradient}>Albuquerque, New Mexico</b><span className={styles.gradientLight}> - October 22-24, 2026</span></p>
-      <ConferenceCountdown></ConferenceCountdown>
+      <p className="pt-0 text-4xl" ><b className={styles.gradient}>Baltimore, Maryland</b><span className={styles.gradientLight}> - October 16-18, 2025</span></p>
     </div>
   </div>
 
-  <div className="rounded md:col-span-5 mt-8 border-4 border-albuquerque-brown border-solid bg-albuquerque-brown">
-  <h3 className="p-4 pt-3 text-white">2026 Conference Key Info</h3>
+  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
+  <h3 className="p-4 pt-3 text-white">2025 Conference Key Info</h3>
   <div className="bg-primary text-center rounded">
     <div className='text-left p-4'>
-    <span className="font-bold">Dates:</span> Thursday, October 22th through Saturday, October 24th, 2026
+    <b>Attendees: </b>Access all conference info through our event platform, <a href='https://whova.com/portal/wEd@0WUr3YKxrkQZXwQ71Y@8-gMN99hZpaMvJetEh-k=' target='_blank' rel='noreferrer'>Whova</a>. More information can be found on our <a href='/2025/attend/resources'>general resources</a> page.
+    <br /><br />
+    <span className="font-bold">Dates:</span> Thursday, October 16th through Saturday, October 18th, 2025
     <br />
-    <span className="font-bold">Location:</span> Albuquerque, New Mexico at the Albuquerque Convention Center
+    <span className="font-bold">Location:</span> Baltimore, Maryland at the Baltimore Convention Center
     <br />
     </div>
     <div className="text-left p-4">
       <h4 className="font-bold text-lg mb-2">🗓️ Key Dates</h4>
       <ul className="space-y-2">
-        <li><span className="font-semibold">Website Updates:</span> Check Back in 2026</li>
-        <li><span className="font-semibold">Conference Weekend:</span> October 22–14, 2026</li>
+        <li><span className="font-semibold">RFP Opens:</span> March 1, 2025</li>
+        <li><span className="font-semibold">Registration Opens:</span> May 1, 2025</li>
+        <li><span className="font-semibold">Call for Posters/Talks Opens:</span> May 1, 2025</li>
+        <li><span className="font-bold">Extended! RFP Deadline:</span> June 22, 2025</li>
+        <li><span className="font-semibold">Early Bird Deadline:</span> June 30, 2025</li>
+        <li><span className="font-semibold">Research Talk Deadline:</span> June 30, 2025</li>
+        <li><span className="font-semibold">Accomodations Request Deadline:</span> August 31, 2025</li>
+        <li><span className="font-semibold">Poster Submission Deadline:</span> August 31, 2025</li>
+        <li><span className="font-semibold">Hotel Block Closes:</span> September 23, 2025</li>
+        <li><span className="font-semibold">Registration Closes:</span> September 26, 2025</li>
+        <li><span className="font-semibold">Conference Weekend:</span> October 16–18, 2025</li>
       </ul>
     </div>
   </div>
 </div>
 
 
-  <div className="rounded md:col-span-5 mt-8 border-4 border-albuquerque-brown border-solid bg-albuquerque-brown">
+  <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
     <Image
       src="/images/2023/2023_homepage_bannerupdate.png"
       alt=""
@@ -67,7 +77,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
       <h3 className="p-4 pt-3 text-white">Conference for LGBTQ+ People and Allies in STEM</h3>
         <div className="bg-primary text-left rounded p-4">
         <p>
-          The 16th Annual oSTEM Conference will take place in Albuquerque, NM
+          The 15th Annual oSTEM Conference will take place in Baltimore, MD
           with 1,100+ LGBTQ+ students, professionals, recruiters, and respective allies in STEM fields
           from across the country and around the globe. This space is designed for
           attendees to share their professional and personal experiences and learn
